--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "@iconify-json/lucide": "^1.2.56",
+    "@iconify-json/mdi": "^1.2.3",
     "@rehype-pretty/transformers": "^0.13.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
